--- a/wp-content/plugins/ghes-vlp/emails/successfulCancel.html
+++ b/wp-content/plugins/ghes-vlp/emails/successfulCancel.html
@@ -93,6 +93,8 @@
             <br />
             ~SubscriptionPaymentsList~
             <br />
+            <p>Georgetownhill Early School Tax ID: ~taxid~</p>
+            <br />
 
 
             <p>Sent by the Georgetown Hill Website Registration</p>
