--- a/wp-content/plugins/ghes-vlp/emails/successfulCharge.html
+++ b/wp-content/plugins/ghes-vlp/emails/successfulCharge.html
@@ -91,6 +91,8 @@
             <p>~PaymentAccountType~: ~PaymentAccount~</p>
             <hr />
             <br />
+            <p>Georgetownhill Early School Tax ID: ~taxid~</p>
+            <br />
             ~SubscriptionPaymentsList~
             <br />
 
